--- a/神经网络/神经网络笔记.md
+++ b/神经网络/神经网络笔记.md
@@ -285,15 +285,18 @@ How often to update the weights
 
 ## 解决方案:针对viewpoint
 - redundant invariant features
-- replicated features with pooling. (convolutional neural nets) LEC5C
+- put a box around the object and use normalized pixels.
+- replicated features with pooling. (convolutional neural nets)CNN 卷积神经网络
+- use a hierarchy of parts that have explicit poses relative to the camera
 ### 针对dimension-hopping
 解决方案： The judicious normalization approach
 具体方法： put a box around the object and use it as a coordinate frame
-
+优点：解决 translation, totation, scale, shear, stretch
 然而，找到合适的box比较困难：
 - segmentation errors
 - occlusion（？遮光）
 - unusual orientation(?为什么呢)
+- 事实上，人脑是先识别再旋转的
 
 首先要recognize the shape to get the box right.
 - 解决box的方案： the brute force normalization
