--- a/[9] 读书/[9-6] 科技/物理小知识.md
+++ b/[9] 读书/[9-6] 科技/物理小知识.md
@@ -93,3 +93,9 @@
 ## 系综
 ## GRW
 ## 退相干历史
+# 《万物科学》
+流体：伯努利效应
+为什么公路撒冰可以化冰？虽然没有增加熔化速度，但是减小了凝结速度
+壁虎：1、大气压不是原因，因为脚上没有可以挤出空气的杯状结构。2、摩擦力可以解释在墙上爬，但不能解释天花板上爬3、胶水状粘稠物有作用，但壁虎脚上没有类似腺体。4、答案：几百万个细毛构成的网状结构，分子间作用力
+为何飞蛾扑火？1、干扰了自然光导航2、飞蛾眼睛适应了光线后，一旦离开就会“失明”，只好飞回来
+为何一些遗传病多见于男性？X染色体上的隐性基因，且Y染色体没有对应。
