脚本自动上传

--- a/[6] 数学/[6-1] 回归/1 一元回归.md
+++ b/[6] 数学/[6-1] 回归/1 一元回归.md
@@ -95,7 +95,7 @@ $\sigma ={{S}_{y}}=\sqrt{\frac{\sum{{{({{y}_{i}}-{{{\hat{y}}}_{i}})}^{2}}}}{n-2}
 ### DW检验
 1. H0
 2. 构建随机变量
-$DW=\frac{\sum\limits_{t=2}^{n}{{{({{e}_{t}}-{{e}_{t-1}})}^{2}}}}{\sum\limits_{t=2}^{n}{{{e}_{t}}^{2}}}\approx 2(1-\rho )$
+$DW=\dfrac{\sum\limits_{t=2}^{n}{{{({{e}_{t}}-{{e}_{t-1}})}^{2}}}}{\sum\limits_{t=2}^{n}{{{e}_{t}}^{2}}}\approx 2(1-\rho )$
 3. 拒绝域
 ### 拟合优度检验
-${{R}^{2}}=\frac{SSR}{SST}$
+${{R}^{2}}=\dfrac{SSR}{SST}$
