脚本自动上传

--- a/[6] 数学/[6-1] 回归/分布滞后模型.md
+++ b/[6] 数学/[6-1] 回归/分布滞后模型.md
@@ -20,7 +20,7 @@ $Y_t=\alpha +\beta_0 X_t+\beta_1 X_{t-1}+...+\beta_s X_{t-s}+u_t$
 关于滞后长度问题，可以用AIC准则或SIC准则
 $AIC=e^{2k/n}\dfrac{\sum e_t^2}{n}$
 $SIC=n^{k/n}\dfrac{\sum e_t^2}{n}$
-其中，k是模型中的参数，n是样本容量，$\sum e_t^2$是残差平方和
+其中，k是模型中的参数个数，n是样本容量，$\sum e_t^2$是残差平方和
 k越大，残差平方和越小
 ## 模型改良2：经验加权估计法
 根据经验预设一个权重
@@ -30,4 +30,29 @@ k越大，残差平方和越小
 3. ∧结构
 例如，预设权重为1/2，1/4,1/6,1/8，那么：
 $Y_t=\alpha +\beta_0 (\frac{1}{2}X_t)+\beta_0 (\frac{1}{4}X_{t-1})+\beta_0 (\frac{1}{6}X_{t-2})+\beta_0 (\frac{1}{8}X_{t-3})$
+模型变成了一元线性回归模型
 ## 模型改良3：阿尔蒙法
+用经验毕竟太主观，那么用多项式逼近滞后参数
+$\beta_0=\alpha_0+\alpha_10+\alpha_20^2+...+\alpha_m0^m$
+$\beta_1=\alpha_0+\alpha_11+\alpha_21^2+...+\alpha_m1^m$
+$\beta_2=\alpha_0+\alpha_12+\alpha_22^2+...+\alpha_m2^m$
+...
+$\beta_s=\alpha_0+\alpha_1s+\alpha_2s^2+...+\alpha_ms^m$
+模型变为如下形式：
+$Y_t=\alpha+\alpha_0(X_t+X_(t-1)+X_(t-2)+...+X(t-s))$
+$+\alpha_1(X_t+2X_(t-1)+3X_(t-2)+...+sX(t-s))$
+$+\alpha_2(X_t+2^2X_(t-1)+3^2X_(t-2)+...+s^2X(t-s))$
+...
+$+\alpha_1(X_t+2^2X_(t-1)+3^mX_(t-2)+...+s^mX(t-s))$
+一般m取2或3，很少超过4
+回归变成m元线性回归模型
+
+# 自回归模型
+## 库伊克模型
+对于一个无限分布滞后模型，如果滞后系数衰减是几何级数，那么等价于一阶自回归模型
+
+（推导过程）
+$Y_t=\alpha +\beta_0 X_t+\beta_1 X_{t-1}+...+\beta_s X_{t-s}+u_t$
+$\beta_i=\beta_0 \lambda^i$
+可以推出
+$Y_t=\alpha^{(1)}+\beta_0^{(1)}X_t+\beta_1^{(1)}Y_{t-1}+u_{t-1}^{(1)} $
