脚本自动上传

--- a/[9] 读书/正在读.md
+++ b/[9] 读书/正在读.md
@@ -1,1 +1,24 @@
 # 《系统之美》
+考虑因素：
+- 非线性的世界里，不要用线性的思维模式
+- 恰当地划分系统的边界（并不容易）
+- 多重限制性因素以及相对强弱
+- 无处不在的时间延迟
+- 清晰意识到“有限理性”
+
+8种常见系统基模：
+政策阻力
+公地悲剧
+目标侵蚀
+竞争升级
+富者愈富
+转嫁负担
+规避规则
+目标错位
+
+这些系统基模不能生搬硬套，不要削足适履
+
+系统三要素
+要素、连接、功能
+要素大多是可见的，也有不可见的
+连接，有物质流、信息流
