脚本自动上传

--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -278,7 +278,7 @@ copy():拷贝
 
 集合是可变的
 
-*   构造
+-  构造
 
 x1=[1,1,2,3,4];
 
@@ -286,7 +286,7 @@ x=set(x1);
 
 >>> {1, 2}
 
-*   集合方法
+- 集合方法
 
 z1=x.intersection(y);#交
 
