脚本自动上传

--- a/[6] 数学/[6-1] 回归/时间序列分析.md
+++ b/[6] 数学/[6-1] 回归/时间序列分析.md
@@ -1,4 +1,35 @@
 
 
+<!-- toc orderedList:0 depthFrom:1 depthTo:6 -->
+
+* [基本概念](#基本概念)
+  * [伪回归](#伪回归)
+  * [时间序列的平稳性](#时间序列的平稳性)
+
+<!-- tocstop -->
+
 # 基本概念
 ## 伪回归
+伪回归的根本原因在于时间序列的非平稳性。
+用传统方法对彼此不相关的非平稳变量进行回归，那么t检验和F检验往往倾向于显著
+
+## 时间序列的平稳性
+- 严格平稳
+**定义：**
+${Y_t}$是一个随机过程
+$\forall n,h $
+if：
+ $F_{Y_{t_1},Y_{t_2},...,Y_{t_n}}(Y_1,...,Y_n)=F_{Y_{t_1+h},Y_{t_2+h},...,Y_{t_n+h}}(Y_1,...,Y_n)$
+那么${Y_t}$是一个严格平稳随机过程
+- 弱平稳
+指的是${Y_t}$的期望、方差、协方差不随时间推移而变化
+**定义：**
+${Y_t}$是一个随机过程
+$\forall t $
+if：
+$E(Y_t)=u$
+$Var(Y_t)=\sigma^2$
+$Cov(Y_t,Y_s)=Cov(Y_{t+h},Y_{s+h})=r_{t-s}$
+那么${Y_t}$是一个弱平稳随机过程
+
+在时间序列中讨论的平稳，通常指弱平稳
