脚本自动上传

--- a/[99] 进行中/统计学分享.md
+++ b/[99] 进行中/统计学分享.md
@@ -15,3 +15,26 @@ $P(y_i|x_i;\theta)=\dfrac{1}{\sqrt{2 \pi} \sigma} exp(\dfrac{-(y_i- \theta^T x_i
 使用MLE方法$L(\theta)=$...
 取对数：$log L(\theta)=m log\dfrac{1}{\sqrt{2 \pi} \sigma}-\dfrac{1}{\sigma^2} \dfrac{1}{2} \sum(y-\theta^T x)^2$
 上式中，$\dfrac{1}{2} \sum(y-\theta^T x)^2=J(\theta)$
+
+# sigmoid的合理性
+sigmoid函数：
+$h_\theta (x) = \dfrac{1}{1+e^{-\theta^T x}}$
+## 解释1：特征解释
+1. 无穷的定义域压缩到(0,1)，并且0附近的变化被放大
+2. 连续可到
+
+## 解释2：
+$g'(z)=g(z)(1-g(z))$
+有以上特征，可以推导出MLE，SGD
+
+## 解释3：
+step1：
+$y \in \{ 0,1 \}$服从伯努利分布 ,伯努利分布是Exp family的一员
+step2：
+伯努利：$p(y;\phi)=\phi^y(1-\phi)^{1-y}$
+写成EXP family标准形式：$f_X(x|\theta)=h(x)exp(\sum \eta_i(\theta) \tau )$
+
+## 解释4：最大熵
+[...]→[0,1]
+
+反推时，要使得信息不丢失，只能用$h_\theta (x)=\dfrac{1}{1+e^{- \eta}}$
