脚本自动上传

--- a/[99] 进行中/统计学分享.md
+++ b/[99] 进行中/统计学分享.md
@@ -32,7 +32,10 @@ step1：
 $y \in \{ 0,1 \}$服从伯努利分布 ,伯努利分布是Exp family的一员
 step2：
 伯努利：$p(y;\phi)=\phi^y(1-\phi)^{1-y}$
-写成EXP family标准形式：$f_X(x|\theta)=h(x)exp(\sum \eta_i(\theta) \tau )$
+写成EXP family标准形式：$f_X(x|\theta)=h(x)exp(\sum \eta_i(\theta) \Gamma(x) ...)$
+此时，$\phi=\dfrac{1}{1+e^{-\eta}}$
+step3:
+所以$h_\theta (x)=\dfrac{1}{1+e^{-\eta}}$
 
 ## 解释4：最大熵
 [...]→[0,1]
