--- a/[9] 读书/[9-5] 社会经济学/4进化论.md
+++ b/[9] 读书/[9-5] 社会经济学/4进化论.md
@@ -17,3 +17,21 @@
 - 第一次笑。最初的笑是为了建立共享的情绪。艺术也是器官，音乐与舞蹈让团体在同一个节奏上。对艺术的精通是为了达到崇高的地位，其实现需要耐心、服从、尊重，以及长年随侍在传承艺术技巧及其它信息的长者身旁，艺术在广义概念中的适应性价值，就变得合理了。
 - 宗教与文化。1、宗教是一种有益“基因”2、领导者制造的骗局3、宗教是一种文化寄生物4、宗教在狩猎采集社会中有用，现代社会则不然（与鬼共舞）5、宗教是在非宗教有利的情形下，需要付出代价的那一方面。（疯猴子与小狗的卷尾巴）
 - 美国教会也起到了原始的’金融“or”货币功能“，中国的”人情“货币也类似
+
+# 《疯狂人类进化史》
+## 人类的几种病
+- 进化病
+- 文明病
+- 医源病
+
+## 一些链条
+都是用另一个痛苦来解决这个痛苦：
+人类无毛→散热理论→盐成为人类必需品（也就人类如此）
+
+脑子大→早产（又名幼态持续）→代机之间有了传承→女人无法劳动→需要绑定男人→隐藏发情期、隐蔽排卵等→家庭、色情、感情博弈等一系列结果
+
+早产→痛与高死亡率→向男性宣传不易
+
+成年后：
+- 男性不断掩盖幼态持续：因为年长看起来更有权力与财富
+- 女性增强幼态持续：因为娃娃脸象征年轻，年轻更能生育也更健康
