--- a/[9] 读书/[9-5] 社会经济学/7心理学.md
+++ b/[9] 读书/[9-5] 社会经济学/7心理学.md
@@ -143,11 +143,11 @@
 5、生殖器，12~18岁
 所有人的心理年龄都停留在5岁之前
 
-俄期，能接受关系的复杂性。会有忠诚的底线，但不再要求对方绝对属于你
-俄期国家，对人的复杂度，即性欲、竞争有很高的接纳度
-前俄期，对忠诚有极高的要求，只想生活在一个单纯简单的世界中
-肛欲期，重要表现是控制与强迫，追求洁净和秩序
-口欲期，表现为好吃
+- 俄期，能接受关系的复杂性。会有忠诚的底线，但不再要求对方绝对属于你
+- 俄期国家，对人的复杂度，即性欲、竞争有很高的接纳度
+- 前俄期，对忠诚有极高的要求，只想生活在一个单纯简单的世界中
+- 肛欲期，重要表现是控制与强迫，追求洁净和秩序
+- 口欲期，表现为好吃
 
 共生期（6个月），觉得我和妈妈是一体的
 3个月前，甚至觉得自己和宇宙是一体的。
@@ -203,9 +203,23 @@
 3、性羞耻感：俄底浦斯清洁。表现为所有需要都是不好的，而性需要时最坏的
 
 我们必须切记这一点：
-对别人好，可以赢得认可与尊重；若想赢得亲密，只有一条路：真实和敞开
+对别人好，可以赢得认可与尊重；然而若想赢得亲密，只有一条路：真实和敞开
 
 中国式好人为何经常受累不讨好
 1、他们满足别人的需要时，又会忍不住向对方传递信息：你有需要，所以你是坏人
 2、好人的过度付出与之牺牲，让对方有内疚感
 3、好人在向对方传递一个信息：我对你这么好，所以请爱我。当你真去靠近他时，却发现他有一个厚厚的壳
+
+中国巨婴的恶性循环：
+```
+1. 家庭关系的定海神针应当是夫妻关系
+2. 然而中国夫妻关系经常回到共生关系（共生绞杀）
+3. 于是共生纽带回到孩子身上
+4. 母子称为关系的核心
+5. 父亲更加脱离，母子更加绑紧
+6. 子女长大后，更加爱无能
+```
+
+>唠叨：控制型咒语
+巨婴想象：行动能力差，做任何事最求完美
+家庭政治：每个人都在累积权力资本和道德资本
