脚本自动上传

--- a/[9] 读书/[9-5] 社会经济学/1教材经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/1教材经济学.md
@@ -1,4 +1,10 @@
-需求=f(商品的价格，替代品的价格，互补品的价格，收入，偏好，预期，消费者数量)
+
+
+
+
+
+
+
 
 
 金融工程发展方向：
@@ -44,6 +50,13 @@ GDP:初步核算：季度后15天。初步核实：季度后45天。初步核算
     - 守法成本
     - 道德成本（投资者忽视自己的监督，投资者不使用挤兑压力）
 # 微观经济学汇总
+## 供求
+需求：在 **一定的时期** ，在 **每个价格** 水平下，**消费者** **愿意** 并且 **能够** 购买的商品数量
+需求=f(商品的价格，替代品的价格，互补品的价格，收入，偏好，预期，消费者数量)
+
+供给：生产者在某一特定时期内，在每一价格水平上生产者愿意并且能够提供的一定数量的商品或劳务。
+供给=f(价格，成本，技术，相关品价格，生产者预期)
+
 ## 消费论
 $ max U(X_1,X_2,...,X_n)$
 $s.t. P_1X_1+P_2X_2+...P_nX_n=I$
