--- a/[9] 读书/[9-5] 社会经济学/6管理学.md
+++ b/[9] 读书/[9-5] 社会经济学/6管理学.md
@@ -5,3 +5,11 @@ Swot
 PDCA:plan,do,check,action
 6w2h:what  why  who  when  which  how    how much
 SMART:specific  attainable  measurable  relevant  time-based
+## 史前累积
+## 古典管理理论
+### 泰罗
+1. 科学管理的中心问题是提高劳动生产率
+2. 需要挑选和培训一流工人（一流工人指的是适合某种工作并且愿意努力的人）
+3. 标准化
+4. 刺激性报酬
+5. “精神革命”：双方合作，共同“把蛋糕做大”
