--- a/[2] python/[9.4] time库.md
+++ b/[2] python/[9.4] time库.md
@@ -1,6 +1,15 @@
 ```python
+
 time.clock()
-statement
+
 
 print(time.clock)
+```
+
+# datetime
+```python
+import datetime
+now = datetime.datetime.now()#返回一个datetime.datetime类
+t_str=now.strftime('%Y-%m-%d %H:%M:%S')#把datetime.datetime转化为str
+d = datetime.datetime.strptime(t_str, '%Y-%m-%d %H:%M:%S')#把str转化为datetime.datetime
 ```
