--- a/[2] python/[9.6] xlrd&xlwt.md
+++ b/[2] python/[9.6] xlrd&xlwt.md
@@ -29,3 +29,17 @@ sheet_1.write_merge(x,x+m,y,y+n,"hhh")
 #与读取用的merged_cells不同，这里的参数含边界
 file.save("d2.xls")
 ```
+
+# 用win32com调用excel模块，这样既能读也能写
+import win32com.client #这里用到win32com.client，需要安装pywin32模块
+#下载地址 http://sourceforge.net/projects/pywin32/files/pywin32/Build216/
+
+xlApp = win32com.client.Dispatch('Excel.Application') #打开EXCEL，这里不需改动
+xlBook = xlApp.Workbooks.Open('D:\\1.xls') #将D:\\1.xls改为要处理的excel文件路径
+xlSht = xlBook.Worksheets('sheet1') #要处理的excel页，默认第一页是‘sheet1’
+
+aaa = xlSht.Cells(1,2).Value #可以用这种方法获取指定单元格的值
+xlSht.Cells(2,3).Value = aaa #可以用这种方法给指定的单元格赋值
+
+xlBook.Close(SaveChanges=1) #完成 关闭保存文件
+del xlApp
