--- a/[9] 读书/[9-1] 诸子百家/[9-1-2] 道德经.md
+++ b/[9] 读书/[9-1] 诸子百家/[9-1-2] 道德经.md
@@ -1,4 +1,6 @@
-上篇第一章道可道,非常道。名可名,非常名。无名天地之始；有名万物之母。故常无，欲以观其妙；常有，欲以观其徼。此两者同出而异名，同谓之玄。玄之又玄，众妙之门。
+# 上篇
+
+第一章道可道,非常道。名可名,非常名。无名天地之始；有名万物之母。故常无，欲以观其妙；常有，欲以观其徼。此两者同出而异名，同谓之玄。玄之又玄，众妙之门。
 第二章天下皆知美之为美，斯恶已；皆知善之为善，斯不善已。故有无相生，难易相成，长短相形，高下相倾，音声相和，前后相随。是以圣人处无为之事，行不言之教。万物作焉而不辞，生而不有，为而不恃，功成而弗居。夫唯弗居，是以不去。
 第三章不尚贤，使民不争；不贵难得之货，使民不为盗；不见可欲，使民心不乱。是以圣人之治：虚其心，实其腹；弱其志，强其骨。常使民无知无欲。使夫知者不敢为也。为无为，则无不治。
 第四章道冲，而用之或不盈。渊兮，似万物之宗。挫其锐，解其纷，和其光，同其尘。湛兮似或存。吾不知谁之子，象帝之先。
@@ -35,7 +37,10 @@
 第三十五章执大象，天下往。往而不害，安平太。乐与饵，过客止。道之出口，淡乎其无味，视之不足见，听之不足闻，用之不足既。
 第三十六章将欲歙(xī)之，必固张之；将欲弱之，必固强之；将欲废之，必固举之；将欲取之，必固与之。是谓微明。柔弱胜刚强。鱼不可脱于渊，国之利器不可以示人。
 第三十七章道常无为而无不为。侯王若能守之，万物将自化。化而欲作，吾将镇之以无名之朴。无名之朴，夫亦将不欲。不欲以静，天下将自定。
-下篇第三十八章上德不德，是以有德；下德不失德，是以无德。上德无为而无以为。下德为之而有以为。上仁为之而无以为。上义为之而有以为。上礼为之而莫之应，则攘(rǎng)臂而扔之。故失道而后德，失德而后仁，失仁而后义，失义而后礼。夫礼者，忠信之薄，而乱之首。前识者，道之华，而愚之始。是以大丈夫处其厚，不居其薄；处其实，不居其华。故去彼取此。
+
+# 下篇
+
+第三十八章上德不德，是以有德；下德不失德，是以无德。上德无为而无以为。下德为之而有以为。上仁为之而无以为。上义为之而有以为。上礼为之而莫之应，则攘(rǎng)臂而扔之。故失道而后德，失德而后仁，失仁而后义，失义而后礼。夫礼者，忠信之薄，而乱之首。前识者，道之华，而愚之始。是以大丈夫处其厚，不居其薄；处其实，不居其华。故去彼取此。
 第三十九章昔之得一者：天得一以清；地得一以宁；神得一以灵；谷得一以盈；万物得一以生；侯王得一以为天下贞。其致之也，谓：天无以清，将恐裂；地无以宁，将恐废；神无以灵，将恐歇；谷无以盈，将恐竭；万物无以生，将恐灭；侯王无以贵高，将恐蹶(jué)。故贵以贱为本，高以下为基。夫是以侯王自谓孤、寡、不榖（gu)。此非以贱为本邪?非乎!故致数舆无舆。不欲琭(lù)琭(lù)如玉，珞(luò)珞(luò)如石。
 第四十章反者道之动，弱者道之用。天下万物生于有，有生于无。
 第四十一章上士闻道，勤而行之；中士闻道，若存若亡；下士闻道，大笑之。不笑，不足以为道。故建言有之：明道若昧；进道若退；夷道若纇(lèi)。上德若谷；大白若辱；广德若不足；建德若偷；质真若渝(yú)。大方无隅(yú)；大器晚成；大音希声；大象无形；道隐无名。夫唯道，善贷且成。
