--- a/[9] 读书/[9-1] 诸子百家/[9-1-4]论语.md
+++ b/[9] 读书/[9-1] 诸子百家/[9-1-4]论语.md
@@ -1,4 +1,4 @@
-学而第一
+# 学而第一
 
 『１』子曰：「学而时习之，不亦说乎？有朋自远方来，不亦乐乎？人不知而不愠，不亦君子乎？」
 『２』有子曰：「其为人也孝弟，而好犯上者，鲜矣；不好犯上，而好作乱者，未之有也。君子务本，本立而道生。孝弟也者，其为仁之本与！」
@@ -18,7 +18,7 @@
 知来者。」
 『１６』子曰：「不患人之不己之，患不知人也。」
 
-为政第二
+# 为政第二
 
 『１』子曰：「为政以德，譬如北辰居其所而众星共之。」
 『２』子曰：「诗三百，一言以蔽之，曰：『思无邪』。」
@@ -45,7 +45,7 @@
 『２３』子张问：「十世可知也？」子曰：「殷因於夏礼，所损益，可知也；周因於殷礼，所损益，可知也。其或继周者，虽百世，可知也。」
 『２４』子曰：「非其鬼而祭之，谄也。见义不为，无勇也。」
 
-八佾第三
+# 八佾第三
 
 『１』孔子谓季氏，「八佾舞於庭，是可忍也，孰不可忍也？」
 『２』三家者以雍彻。子曰：「『相维辟公，天子穆穆』，奚取於三家之堂？」
@@ -102,7 +102,7 @@
 
 
 
-里仁第四
+# 里仁第四
 
 『１』子曰：「里仁为美。择不处仁，焉得知？」
 
@@ -160,7 +160,7 @@
 『２６』子游曰：「事君数，斯辱矣；朋友数，斯疏矣。」
 
 
-公冶长第五
+# 公冶长第五
 
 『１』子谓公冶长，「可妻也。虽在缧□之中，非其罪也。」以其子妻之。
 
@@ -231,7 +231,7 @@
 
 
 
-雍也第六
+# 雍也第六
 
 『１』子曰：「雍也可使南面。」
 
@@ -302,7 +302,7 @@
 其犹病诸！夫仁者，己欲立而立人，己欲达而达人。能近取譬，可谓仁之方也已。」
 
 
-述而第七
+# 述而第七
 
 『１』子曰：「述而不作，信而好古，窃比於我老彭。」
 
@@ -389,7 +389,7 @@
 
 『３８』子温而厉，威而不猛，恭而安。
 
-泰伯第八
+# 泰伯第八
 
 『１』子曰：「太伯其可谓至德也已矣。三以天下让，民无得而称焉。」
 
@@ -441,7 +441,7 @@
 沟恤，禹吾无间然矣。」
 
 
-子罕第九
+# 子罕第九
 
 『１』子罕言，利，与命，与仁。
 
@@ -512,7 +512,7 @@
 『３０』子曰：「可与共学，未可与适道；可与适道，未可与立；可与立，未可与权。」「唐棣之华，
 偏其反而；岂不尔思？室是远而。」子曰：「未之思也，未何远之有？」
 
-乡党第十
+# 乡党第十
 
 『１』孔子於乡党，恂恂如也，似不能言者。其在宗庙朝廷，便便然；唯谨尔。朝与下大夫言，侃侃如
 也；与上大夫言，□□如也。君在，□□如也，与与如也。
@@ -565,7 +565,7 @@
 
 『２０』色斯举矣，翔而後集。曰：「山梁雌雉，时哉时哉！」子路共之，三嗅而作。
 
-先进第十一
+# 先进第十一
 
 『１』子曰：「先进於礼乐，野人也；後进於礼乐，君子也。如用之，则吾从先进。」
 
@@ -636,7 +636,7 @@
 「夫子何哂由也？」曰：「为国以礼，其言不让，是故哂之。」「唯求则非邦也与？」「安见方六七十，
 如五六十，而非邦也者。」「唯赤非邦也与？」「宗庙会同，非诸侯而何？赤也为之小，孰能为之大！」
 
-颜渊第十二
+# 颜渊第十二
 
 『１』颜渊问「仁」。子曰：「克己复礼，为仁。一日克己复礼，天下归仁焉。为仁由己，而由仁乎
 哉？」颜渊曰：「请问其目？」子曰：「非礼勿视，非礼勿听，非礼勿言，非礼勿动。」颜渊曰：「回
@@ -704,7 +704,7 @@
 
 『２４』曾子曰：「君子以文会友；以友辅仁。」
 
-子路第十三
+# 子路第十三
 
 『１』子路问「政」。子曰：「先之，劳之。」请益。曰：「无倦。」
 
@@ -785,7 +785,7 @@
 
 『３０』子曰：「以不教民战，是谓弃之。」
 
-宪问第十四
+# 宪问第十四
 
 『１』宪问「耻」。子曰：「邦有道谷，邦无道谷；耻也。」「克、伐、怨、欲，不行焉，可以为『仁』
 矣？」子曰：「可以为难矣，仁则吾不知也。」
@@ -898,7 +898,7 @@
 『４４』阙党童子将命。或问之曰：「益者与？」子曰：「吾见其居於位也，见其与先生并行也；非求
 益者也，欲速成者也。」
 
-卫灵公第十五
+# 卫灵公第十五
 
 『１』卫灵公问陈於孔子。孔子对曰：「俎豆之事，则尝闻之矣；军旅之事，未之学也。」明日遂行。
 
@@ -991,7 +991,7 @@
 『４２』师冕见。及阶，子曰：「阶也！」及席，子曰：「席也！」皆坐，子告之曰：「某在斯！某
 在斯！」师冕出，子张问曰：「与师言之道与？」子曰：「然，固相师之道也。」
 
-李氏第十六
+# 李氏第十六
 
 『１』李氏将伐颛臾。冉有李路见於孔子曰：「李氏将有事於颛臾。」孔子曰：「求，无乃尔是过与？
 夫颛臾，昔者先王以为东蒙主，且在邦域之中矣；是社稷之臣也，何以伐为？」冉有曰：「夫子欲之；
@@ -1041,7 +1041,7 @@
 『１４』邦君子之妻，君称之曰「夫人」；夫人自称「小童」；邦人称之曰「君夫人」，称诸异邦曰
 「寡小君」；异邦人称之，亦曰「君夫人」。
 
-阳货第十七
+# 阳货第十七
 
 『１』阳货欲见孔子，孔子不见，归孔子豚。孔子时其亡也，而往拜之。遇诸涂。谓孔子曰：「来！予
 与尔言。」曰：「怀其宝而迷其邦，可谓仁乎？」曰：「不可。」「好从事而亟失时，可谓知乎？」曰：
@@ -1111,7 +1111,7 @@
 
 『２４』子曰：「年四十而见恶焉，其终也已！」
 
-卫子第十八
+# 卫子第十八
 
 『１』卫子去之；箕子为之奴；比干谏而死。孔子曰：「殷有三仁焉！」
 
@@ -1149,7 +1149,7 @@
 
 『１１』周有八士：伯达、伯□、仲突、仲忽、叔夜、叔夏、李随、李□。
 
-子张第十九
+# 子张第十九
 
 『１』子张曰：「士见危致命，见得思义，祭思敬，丧思哀，其可已矣。」
 
@@ -1211,7 +1211,7 @@
 知，言不可不慎也！夫子之不可及也，犹天之不可阶而升也。夫子之得邦家者。所谓『立之斯立，道之
 期行，绥之期来，动之斯和。其生也荣，其死也哀』；如之何其可及也？」
 
-尧曰第二十
+# 尧曰第二十
 
 『１』尧曰：「咨！尔舜！天之历数在尔躬，允执其中！四海困穷，天禄永终。」舜亦以命禹。曰：
 「予小子履，敢用玄牡，敢昭告于皇皇后帝：有罪不敢赦，帝臣不蔽，简在帝心！朕躬有罪，无以万方；
