--- a/[2] python/[9.6] xlrd&xlwt.md
+++ b/[2] python/[9.6] xlrd&xlwt.md
@@ -31,6 +31,8 @@ file.save("d2.xls")
 ```
 
 # 用win32com调用excel模块，这样既能读也能写
+
+```python
 import win32com.client #这里用到win32com.client，需要安装pywin32模块
 #下载地址 http://sourceforge.net/projects/pywin32/files/pywin32/Build216/
 
@@ -43,3 +45,4 @@ xlSht.Cells(2,3).Value = aaa #可以用这种方法给指定的单元格赋值
 
 xlBook.Close(SaveChanges=1) #完成 关闭保存文件
 del xlApp
+```
