--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -1,3 +1,9 @@
+！！！注意！！！
+试着用markdown记录这些，效果并不好，所以还是参见doc:
+[微积分.docx](微积分.docx)
+
+
+
 # 一元函数微积分
 
 ## 中值定理
@@ -24,8 +30,10 @@ $\phi(x)=f(x)-f(a)-\dfrac{f(b)-f(a)}{F(b)-F(a)}(F(x)-F(a))$
 以上条件推出：$x_0$是极小值点（极大值点）
 
 ### 充分条件3
-$
- \left ( \begin{array}{ccc}
-a & b & c '你好' \\
-d & e & f \\
-g & h & i \end{array} \right ) $
+1. $x_0$处连续
+2. $U^0(x_0,\delta)$内可导
+3. 左右领域内异号
+
+以上条件推出$x_0$是极值点
+
+## 拐点
