--- a/[9] 读书/[9-2] 现代百家/现代百家.md
+++ b/[9] 读书/[9-2] 现代百家/现代百家.md
@@ -1,5 +1,5 @@
-现代百家
-3.1晓说
+
+# 3.1晓说
 切格瓦拉：阿根廷人，古巴革命，导弹危机。
 革命：就是培养仇恨
 美国政治：
@@ -31,7 +31,7 @@
 黑社会
 
 
-3.2东吴相对论
+# 东吴相对论
 大数据：只考虑相关性，不考虑因果。黑箱
 互联网思维
 解决问题时，解决方法又会造成新的问题，充分预测才行。
@@ -86,37 +86,72 @@
 咨询公司----此乃天意：开掉某些人等用的借口
 对系统敬畏，就是去我执：诸葛亮、关羽、华容道
 
-3.3罗辑思维
-3.3.1罗胖60秒
-排队模型：新开一个窗口，最惨的是排在中间的人。
-U盘化生存：只对自己的价值负责
-再完美的理论，如果不允许辩论，那也是错误的理论
-道德，是通过指责他人实现的。
-一个人的价值，建立在他人的指标上时，注定会悲剧
-中国人被排斥的原因：不参加投票、不参加罢工、不置不动产。总述，是把自己当外人，不准备融入美国社会。
-不要公开表扬：引发嫉妒。周围人认可，则嫉妒有正作用，否则有副作用。
-这世界或许不存在自己的想法，所有的想法都是别人影响而来的。
-善良、可激怒、宽容、简单透明：博弈论的最优解
-当一群高智商集结起来时，形成的群体智商很低。
-一次拥有，就是一次失去的开始
-隋炀帝：建洛阳、修运河、三征高句丽。既要有力量，又要有力量的控制者。
-小国家扩张后，原本很适合的制度会出现问题。
-好的政治是几方玩牌而不掀桌子。1、选好玩家2、定好规矩3、搞好气氛。
-穷人富人矛盾不可调和的时候，就一定会出现军阀。
-对具体的人好些，比对抽象的人好强。
-阴谋论：捏造证据、论证必要非充分、不可证伪、爱国
-阴谋论：把复杂的随机事件归因于单一的因果。1、喜欢简单的故事，这是没长大。2、喜欢扮演弱者，这是长不大3、喜欢愤怒，这是不愿长大。
+# 罗辑思维
+## 罗胖60秒
+- 排队模型：新开一个窗口，最惨的是排在中间的人。
+- U盘化生存：只对自己的价值负责
+- 再完美的理论，如果不允许辩论，那也是错误的理论
+- 道德，是通过指责他人实现的。
+- 一个人的价值，建立在他人的指标上时，注定会悲剧
+- 中国人被排斥的原因：不参加投票、不参加罢工、不置不动产。总述，是把自己当外人，不准备融入美国社会。
+- 不要公开表扬：引发嫉妒。周围人认可，则嫉妒有正作用，否则有副作用。
+- 这世界或许不存在自己的想法，所有的想法都是别人影响而来的。
+- 善良、可激怒、宽容、简单透明：这是博弈论的最优解
+- 当一群高智商集结起来时，形成的群体智商很低。
+- 一次拥有，就是一次失去的开始
+- 隋炀帝：建洛阳、修运河、三征高句丽。既要有力量，又要有力量的控制者。
+- 小国家扩张后，原本很适合的制度会出现问题。
+- 好的政治是几方玩牌而不掀桌子。1、选好玩家2、定好规矩3、搞好气氛。
+- 穷人富人矛盾不可调和的时候，就一定会出现军阀。
+- 对具体的人好些，比对抽象的人好强。
+- 阴谋论：捏造证据、论证必要非充分、不可证伪、爱国
+- 阴谋论：把复杂的随机事件归因于单一的，确定性的因果。1、喜欢简单的故事，这是没长大。2、喜欢扮演弱者，这是长不大3、喜欢愤怒，这是不愿长大。
 
-自然法理论：把原本“天条”写下来
-中国为什么有前途？
-麦克莱恩：集装箱之父。人的文明----实际上是人的延伸程度。
-全球化过程：1、丝路：轻且贵的2、大航海：大宗3、集装箱：世界工厂
+- 自然法理论：把原本“天条”写下来
+- 中国为什么有前途？
+- 麦克莱恩：集装箱之父。人的文明----实际上是人的延伸程度。
+- 全球化过程：1、丝路：轻且贵的2、大航海：大宗3、集装箱：世界工厂
 影响：1、码头工人协会2、水手3、制造业4、全球化5、地缘政治
-市场的广度。灯塔：庇古、科斯争论。公共物品的市场失灵解决：灯塔的入港费。厕所、广播、烟花、消防、警察、法院等大多领域都可以找到商业模式。从而避免政府的：1、效率底下和腐败2、税收不公平问题3、私人部门可以交叉补贴。
-曾国藩：内圣外王，自己有道德还能把事情做成
-倭寇真相：片板不得入海→朝贡、勘合贸易（实际上是国家垄断国际贸易）→争贡之役→（叫停国际贸易）走私→（谢迁后人）汪直→诱杀→倭患
-管理是什么？既是科学又是艺术。虽然对但是没用，不指向一个行动。管理是科学则请咨询公司，是艺术则反躬自省。有时候，偏见更有用。
-靠创造价值挣钱：丐帮、和尚
-靠毁灭价值挣钱：保护费、贪污
-美国大选演讲：本人利国利民，对方误国误民。认输演讲：祝贺、团结。原因：1、输赢无关生存、赢家不能通吃2、输赢反复从来、输家还有机会3、看客决定输赢、输家保有脸面。
-墨西哥妓女调查：不用套平均损失一年生命，而多获得五年收入。
+- 市场的广度。灯塔：庇古、科斯争论。公共物品的市场失灵解决：灯塔的入港费。厕所、广播、烟花、消防、警察、法院等大多领域都可以找到商业模式。从而避免政府的：1、效率底下和腐败2、税收不公平问题3、私人部门可以交叉补贴。
+- 曾国藩：内圣外王，自己有道德还能把事情做成
+- 倭寇真相：片板不得入海→朝贡、勘合贸易（实际上是国家垄断国际贸易）→争贡之役→（叫停国际贸易）走私→（谢迁后人）汪直→诱杀→倭患
+- 管理是什么？既是科学又是艺术。这句话虽然对但是没用，不指向一个行动。管理是科学则请咨询公司，是艺术则反躬自省。有时候，偏见更有用。
+- 靠创造价值挣钱：丐帮、和尚
+- 靠毁灭价值挣钱：保护费、贪污
+- 美国大选演讲：本人利国利民，对方误国误民。认输演讲：祝贺、团结。原因：1、输赢无关生存，赢家不能通吃2、输赢反复重来，输家还有机会3、看客决定输赢，输家保有脸面。
+- 墨西哥妓女调查：不用套平均损失一年生命，而多获得五年收入。
+
+- 言必信，行必果，硁硁然小人哉。大人者言不必信，行不必果，唯仁也哉
+- 现代社会的本质是合作，现代社会消除了三种强制：
+    1. 亲属强制
+    2. 绝对国家主义
+    3. 绝对主义教会
+- 过了高考，人就没有目标、方法、考核了，全部变成了糊涂账，
+有三种能力很重要
+    - 让自己变牛的能力
+    - 让别人帮忙的能力
+    - 想得开，无所谓的能力
+- 如何树立中央的权威：地方熟悉情况的人做下决定后，巡视组签字盖章
+
+- 海洋法系。普通人：有担当。精英：有荣誉。制度：有宽容
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    【未完待续。。。】
