--- a/[9] 读书/[9-5] 社会经济学/[1.2] 教材金融学.md
+++ b/[9] 读书/[9-5] 社会经济学/[1.2] 教材金融学.md
@@ -60,3 +60,34 @@
 特定时期解决银行业不良资产
 
 *不同金融体系形成的原因：剖析欧美的金融发展历史，可以看出，人为的政策管制，对一个国家金融体系格局的形成有极大的影响。管制政策大多取决于对某次危机的反应；而体制一旦形成，就会出现路径依赖----体制变革的成本通常大于维持原有体制的成本。可以说，金融体制的形成有一定的历史偶然性。*
+
+# 金融工程
+## 债券
+### 利率
+- 标准年化利率$R=\dfrac{P_1-P_0}{P_0 T}$
+
+### 久期
+
+定义：
+$D=\dfrac{1}{P_0} \sum\dfrac{t C_t}{(1+y)^t}$
+
+定理：
+$\dfrac{\partial P}{\partial y}=- \dfrac{P_0}{1+y}D$
+$\Longrightarrow$
+$\dfrac{\Delta P}{P}=-\dfrac{\Delta y}{1+y} D$
+
+### 修正久期
+$D^* = \dfrac{1}{1+y}D  \Longrightarrow  \dfrac{\Delta P}{P} = -\Delta y D^* $
+
+### 凸度
+定义：
+$C=\dfrac{1}{P} \dfrac{d^2 P}{d y^2}$
+
+定理：
+$\dfrac{\Delta P}{P} = -D^* \Delta y +\dfrac{1}{2} C (\Delta y)^2$
+
+### 马尔基尔定理
+- 零息债券的久期=到期时间
+- 息票率越高，久期越短
+- 1年计息m次债券的久期，是1年计息1次债券的久期的m倍
+- 债券组合的久期=加权平均
