--- a/[9] 读书/[9-1] 诸子百家/[9-1-4]论语.md
+++ b/[9] 读书/[9-1] 诸子百家/[9-1-4]论语.md
@@ -758,8 +758,7 @@
 『１９』樊迟问仁。子曰：「居处恭，执事敬，与人忠；虽之夷狄，不可弃也。」
 
 『２０』子贡问曰：「何如斯可谓之士矣？」子曰：「行己有耻；使於四方，不辱君命；可谓士矣。」
-曰：「敢问其次？」曰：「宗族称孝焉，乡党称弟焉。」曰：「敢问其次？」曰：「言必信，行必果；
-□□然，小人哉！抑亦可以为次矣。」曰：「今之从政者何如？」子曰：「噫！斗筲之人，何足算也！」
+曰：「敢问其次？」曰：「宗族称孝焉，乡党称弟焉。」曰：「敢问其次？」曰：「言必信，行必果；踁踁然，小人哉！抑亦可以为次矣。」曰：「今之从政者何如？」子曰：「噫！斗筲之人，何足算也！」
 
 『２１』子曰：「不得中行而与之，必也狂狷乎？狂者进取，狷者有所不为也。」
 
