--- a/[9] 读书/[9-5] 社会经济学/9投机.md
+++ b/[9] 读书/[9-5] 社会经济学/9投机.md
@@ -6,12 +6,13 @@
 5、对冲
 
 # 《期货本质》
-：投机者是润滑剂，润滑剂是消耗品。根据大部分人的水平，形态变化。
+投机者是润滑剂，润滑剂是消耗品。根据大部分人的水平，形态变化。
 
 # 《高盛眼中的世界》
 预测模型：1、经济背景、政策2、政治3、开放4、适应于现代的技术5、增长潜力
 指标。宏观：通胀、政府赤字、投资性支出、外债、开放度
 微观：移动电话使用率、互联网、电脑、预期寿命、教育水平、法治反腐、政局稳定
+
 # 《中国企业跨境并购》
 中国企业家的特点
 改革开放后的剧变中脱颖而出的一批人，导致了：
@@ -37,3 +38,29 @@
 ------
 中国企业跨国并购风险：
 1、政治和安全上的风险
+
+# 交易系统
+
+- 信息太多
+人类靠归纳、剔除、曲解来解决信息太多的问题
+RSI,MACD等都是曲解和归纳
+
+- 心理学中的选择模型
+    - 人类损失时，偏向赌一把，是风险爱好者
+    - 人类盈利时，偏向确定的盈利，是风险厌恶者
+【一个图，类似sigmoid曲线】
+
+## 墨菲系统
+- 上涨趋势：价升量升，价跌量跌
+- 下跌趋势：价升量跌，价跌量升
+
+- 判断趋势形成：后峰低于前峰or后姑低于前谷or both
+- 以上纯依赖于收盘价，与日内变化无关
+- 不企图预测，而是抓住趋势中腹
+
+- 注意数据可以对数化，这样等刻度代表等百分比
+
+关于支撑位：
+- 价格在某支撑位逗留时间越长，支撑越有力
+- 支撑位附近有高额交易量，支撑位有力
+- 距今远近
