--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -34,6 +34,101 @@ $\phi(x)=f(x)-f(a)-\dfrac{f(b)-f(a)}{F(b)-F(a)}(F(x)-F(a))$
 2. $U^0(x_0,\delta)$内可导
 3. 左右领域内异号
 
-以上条件推出$x_0$是极值点
+以上条件推出：$x_0$是极值点
 
 ## 拐点
+
+【后面的未完，因为markdown的展现不如word】
+
+
+## 泰勒展开
+如果函数f(x)在闭区间[a,b]上有n阶导数，在开区间(a,b)上有n+1阶导数，那么：
+
+$\forall x \in [a,b]$
+$f(x)=\dfrac{f^{(0)}(x_0)}{0!}(x-x_0)^0 + \dfrac{f^{(1)}(x_0)}{1!}(x-x_0)^1 + \dfrac{f^{(2)}(x_0)}{2!}(x-x_0)^2+...$
+$+\dfrac{f^{(n)}(x_0)}{n!}(x-x_0)^n+R_n(x)$
+
+- Peano余项
+$R_n(x)=o[(x-x_0)^n]$
+- Schlomich-Roche余项
+$R_n(x)=f^{(n+1)}[x_0+\theta (x-x_0)]\dfrac{(1-\theta)^{n+1-p} (x-x_0)^{n+1}}{n!p}$
+where,
+$\theta \in (0,1)$,p是任意正实数
+当p=n+1与p=1分别对应Lagrange余项和Cauchy余项
+
+- Lagrange余项
+$R_n(x)=f^{(n+1)}[x_0+\theta (x-x_0)]\dfrac{ (x-x_0)^{n+1}}{(n+1)!}$
+
+- Cauchy余项
+$R_n(x)=f^{(n+1)}[x_0+\theta (x-x_0)]\dfrac{(1-\theta)^n (x-x_0)^{n+1}}{n!}$
+
+- 积分余项
+$R_n(x)=\dfrac{(-1)^n}{n!} \int^x_ a(t-x)^n f^{n+1}(t) dt$
+
+### 常见的泰勒展开
+$e^x=1 + \dfrac{1}{1!}(x) +\dfrac{1}{2!}(x)^2+\dfrac{1}{3!}(x-x_0)^n + o(x^3)$
+
+$ln(1+x)=x- \dfrac{1}{2}x^2 +\dfrac{1}{3}x^3+ o(x^3)$
+
+$sin(x)=x- \dfrac{1}{3!} x^3+\dfrac{1}{5!}x^5+ o(x^3)$
+
+$arcsin(x)=x+ \dfrac{1}{3!} x^3+\dfrac{1}{5!}x^5+ o(x^5)$
+
+$cosx=1- \dfrac{1}{2}x^2 +\dfrac{1}{4!}x^3+ o(x^4)$
+
+$\dfrac{1}{1-x}=1+x+x^2+x^3+o(x^3)$
+
+$(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\alpha(\alpha-1)(\alpha-2)}{3!}x^3 +o(x^3)$
+
+
+
+
+
+
+
+
+
+# 例题
+
+1. 求$f(x)=x^2ln(1+x)$的在x=0处的n阶导数$f^{(n)}(0)$(n>=3)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[未完待续 ]
