--- a/[6] 数学/运筹学.md
+++ b/[6] 数学/运筹学.md
@@ -81,3 +81,31 @@ fminmax
 
 
 # 七、二次规划
+
+# 灵敏度分析
+- 定义：当fun变化，或b变化时，最优解x的变化
+- 意义，参数变化时，决策需要多大程度的调整
+- 应用
+    1. 参数变化，引起最优值的变化
+
+## 对偶问题
+原问题是
+
+$\begin{array}{lcl}
+\min f(x)\\
+s.t.\\
+\left \{ \begin{array}{rcl}
+g_i(x) \ge 0 \\
+h_j(x)=0   \\
+x \in D
+\end{array} \right.
+\end{array} $对应的对偶问题:$\begin{array}{lcl}
+\max \theta(w,v)\\
+s.t.\\
+\left \{ \begin{array}{rcl}
+w \ge 0 \\
+\theta(w,v)=\inf \{ f(x) - \sum w_ig_i -\sum v_i h_j\}   \\
+\end{array}\right.
+\end{array} $
+
+## DEA方法
