--- a/[9] 读书/[9-2] 现代百家/现代百家.md
+++ b/[9] 读书/[9-2] 现代百家/现代百家.md
@@ -1,5 +1,13 @@
 
 # 3.1晓说
+
+- 代议制的两大基石
+    - 选民匿名投票
+    - 代表实名投票，公布财产，不能被撤职
+
+非民选官员（任命官）不用公布财产
+不经人民同意，不得征税
+
 切格瓦拉：阿根廷人，古巴革命，导弹危机。
 革命：就是培养仇恨
 美国政治：
@@ -31,7 +39,7 @@
 黑社会
 
 
-# 东吴相对论
+# 冬吴相对论
 大数据：只考虑相关性，不考虑因果。黑箱
 互联网思维
 解决问题时，解决方法又会造成新的问题，充分预测才行。
@@ -135,6 +143,7 @@
 
 - 海洋法系。普通人：有担当。精英：有荣誉。制度：有宽容
 
+- 做决定时，都希望有人可以给我们一个理由，有人支持，哪怕有人反对也是好的。我们并不是真正想听取意见，意见在这个时候并不是很重要。我们更多的是需要一个命令，以及可以可以一起承担结果的人。
 
 
 
@@ -143,10 +152,24 @@
 
 
 
+# 罗振宇视频
+## 134恶之花
+- 秦：不分封
+- 汉：分封，七国治乱
+- 魏：防（曹丕，曹植），世家大族崛起（司马）
+- 晋：分封，八王之乱
+- 明：分封+伦理教育，朱棣起兵
 
+永乐大帝
+- 合法性：
+    - 锦衣卫
+    - 太监：出使，专征，监军，分镇，刺探
+    - 永乐大典，北伐蒙古，修建北京城，整合
 
+>凡夫畏果
+菩萨畏因
 
-
+## 恶之果
 
 
 
