--- a/[9] 读书/[9-3] 中国历史/中国金融史.md
+++ b/[9] 读书/[9-3] 中国历史/中国金融史.md
@@ -5,6 +5,13 @@
 期货：逼空、浮盈加仓。空头被迫砍仓后，多头趁机出货。
 4、从开盘5分钟了解一天的涨跌，从收盘半小时了解主力动向
 5、交易所的手段：1、提高保证金比率2、禁开新仓3、质量壁垒
-6、做空东南亚：①泰国经济过热→通胀高→房地产占银行50%贷款②抛售泰铢、泰股→股、汇双暴跌→银行坏账（挤兑）→进一步跌→外资停③政府提高利率→衰退、失业、股市跌，外汇用尽，求助IMF。
+
+## 6、做空东南亚：
+1. 泰国经济过热→通胀高→房地产占银行50%贷款
+2. 抛售泰铢、泰股→股、汇双暴跌→银行坏账（挤兑）→进一步跌→外资停贷
+3. 政府提高利率→衰退、失业、股市跌，外汇用尽，求助IMF。
+
+- 次贷危机→美元贬值→中国外汇储备贬值
+
 7、香港：做空港币→金管局加息→股市跌
 8、国储铜事件、中航油巨亏事件
