--- a/[9] 读书/[9-6] 科技/物理科学.md
+++ b/[9] 读书/[9-6] 科技/物理科学.md
@@ -3,3 +3,15 @@
 1、心理学
 2、热力学
 3、宇宙膨胀
+
+# 《时间简史》
+电子也有波粒二象性
+自旋
+- =0 旋转任意角度
+- =1 旋转$2\pi$
+- =2 旋转$\pi$
+- =1/2旋转两圈
+
+万有引力作用于粒子的质量或能量，引力子自旋=2
+电磁力中介是光子，自旋=1
+弱核力 只作用于自旋为1/2的粒子
