--- a/[9] 读书/[9-5] 社会经济学/[1.1] 教材经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/[1.1] 教材经济学.md
@@ -51,37 +51,77 @@ GDP:初步核算：季度后15天。初步核实：季度后45天。初步核算
     - 道德成本（投资者忽视自己的监督，投资者不使用挤兑压力）
 # 微观经济学汇总
 ## 供求
+- 需求
 需求：在 **一定的时期** ，在 **每个价格** 水平下，**消费者** **愿意** 并且 **能够** 购买的商品数量
 需求=f(商品的价格，替代品的价格，互补品的价格，收入，偏好，预期，消费者数量)
 
+- 供给
 供给：生产者在某一特定时期内，在每一价格水平上生产者愿意并且能够提供的一定数量的商品或劳务。
 供给=f(价格，成本，技术，相关品价格，生产者预期)
 
+- 需求的价格弹性
+    - 可替代性
+    - 商品的广泛性
+    - 对消费者生活的重要程度
+    - 支出占预算的比重
+    - 调节需求量的时间（例子：汽油）
+- 需求的收入弹性
+$e_M=\dfrac{\Delta Q/Q}{\Delta M/M}$
+1. $e_M>0$称为正常品
+    - $e_M<1$必需品
+    - $e_M>1$奢侈品
+2. $e_M<0$称为劣质品
+
 ## 消费论
+
+- 基数效用：边际效用分析法
+- 序数效用：无差异曲线分析法
+
 $ max U(X_1,X_2,...,X_n)$
 $s.t. P_1X_1+P_2X_2+...P_nX_n=I$
 推论：不变的货币边际效用
-$\frac{MU_1}{P_1}=\frac{MU_2}{P_2}=...=\frac{MU_n}{P_n}=\lambda$
+$\dfrac{MU_1}{P_1}=\dfrac{MU_2}{P_2}=...=\dfrac{MU_n}{P_n}=\lambda$
+
 ## 偏好的性质
 - 偏好的完全性 $A>B,A<B,A=B$
 - 偏好的传递性
 - 偏好的非饱和性：商品较多的效用一定大
+
 ## 无差异曲线的性质
 - 无数条
 - 不相交
 - 凸向原点
 - 边际替代率递减
-$MRS_{12}=-\frac{\Delta X_2}{\Delta X_1}=-\frac{dX_2}{dX_1}$
-## 生产论
-- 企业的本质：生产的一种组织形式，一定程度上对市场的替代
-有时企业内部交易成本低，有时市场交易成本低
-- 企业的优势：1.中间产品的交易成本2.专业化3.消除为避免信息不对称的成本。企业的成本：1.契约、监督、激励的成本2.两方向信息传递的成本3.向上级传递错误信息。只传递和执行利己部分
-- 市场的优势1.竞争2.规模3.稳定
-- 企业的规模：在这一点上，再多增加一次内部交易所花费的成本与市场交易所花费的成本相等。
-厂商的目标：追求最大利润
-但所有者不能完全监督和控制职业经理人的行为
-但这种目标偏离也会受制约
+边际替代率的定义：$MRS_{12}=-\dfrac{\Delta X_2}{\Delta X_1}=-\dfrac{dX_2}{dX_1}$
 
+完全替代品：$U(x_1,x_2)=ax_1+bx_2$，此时$MRS_{12}=a/b$
+完全互补品：$U(x_1,x_2)=min\{ ax_1,bx_2 \}$,此时$MRS_{12}=0,\infty$
+## 生产论
+### 企业的本质：生产的一种组织形式，一定程度上对市场的替代
+- 有时企业内部交易成本低，有时市场交易成本低
+    -  企业的成本：
+        1. 契约、监督、激励的成本
+        2. 两方向信息传递的成本
+        3. 向上级传递错误信息。只传递和执行利己部分
+    - 企业的优势：
+        1. 中间产品的交易成本
+        2. 专业化
+        3. 消除为避免信息不对称的成本。
+    - 市场的优势
+        1. 竞争
+        2. 规模
+        3. 稳定
+- 企业的规模：在这一点上，再多增加一次内部交易所花费的成本与市场交易所花费的成本相等。
+- 厂商的目标：追求最大利润
+    - 但所有者不能完全监督和控制职业经理人的行为
+    - 但这种目标偏离也会受制约
+### 生产函数
+一定时期内：
+$Q=f(X_1,X_2,...X_n)$X可以是：劳动、土地、资本、企业家才能
+- 简化后：$Q=f(L,K)$
+    - $Q=aL+bK$
+    - $Q=min\{ \dfrac{L}{u}, \dfrac{K}{v} \}$
+    - $Q=A L^\alpha K^\beta$ 这里，$\alpha+\beta$与1的关系表示规模经济与规模不经济
 ## 市场论
 ### 古诺模型
 $\begin{cases}
