--- a/[99] 进行中/真格基金创业课.md
+++ b/[99] 进行中/真格基金创业课.md
@@ -59,3 +59,116 @@
 
 ## the importance of team
 *徐小平*
+
+### 1. land是创始人的idea
+
+### 2. 合伙人来源。合伙人是找不来的，是召唤过来的。同学，同事，同乡。这些价值观一致，技术背景，商业背景，知根知底。拼凑出来的团队，遇到问题就不行了
+- 合伙人的结构。idea有了，还需要哪些方面军。
+错误的做法是，有个想法，先做起来。这叫单兵作战
+**合伙人比商业模式更重要**
+因为商业模式一定是会剧烈变化的
+
+### 3. 股权分配
+股份是一种心态，是把大家凝聚在一起，一起为了理想奋斗的源动力
+谈的时候，如何汇总，平衡
+一定要有一个绝对控股的老大。稀释后一定要同股不同权
+跟班一般有两位数股份，10
+```
+70 20 10
+75 15 10
+65 20 15
+```
+**股份是汽油，一定要用到干活的人身上** 。 **股权不要随便给外人** 资金进来后，是不参与日常运作的。稀释股份时，尽量少稀释。不要一次性融资过多，
+股份尽量不要给顾问，不要给兼职的人，
+
+#### 期权池
+董事会有权调节 **期权池**
+期权池大小为10%~20%，常见是15%，
+期权池的作用
+1. 留给未来关键岗位引进
+2. 现有合伙人之间调整
+
+#### vesting
+股权兑现
+员工服务一定期限而授予他的激励股权的制度
+
+管理层会议，一般不投票，CEO说了算
+真有重大争议，在董事会，以股东的身份提出。董事会是一人一票
+
+管理层是发动机
+董事会是罗盘
+
+CEO提名VP，董事会批准
+
+#### 团队精神
+1. 平等尊重
+每一个不同层级的人，平等的当成合伙人
+
+2. 关爱福利
+让员工分享利益，分享企业成长的快乐
+
+3. 集体智慧
+CEO容易陷入自信的困境
+反对意见是对CEO的尊重，而不是削弱权威
+
+创业者寻找合伙人时，必须拥有以下素质：
+- 胸怀：挖人给股份，理性范围内多给
+- 意识
+- 魅力
+
+
+# How to Hire
+*杨莉 真格基金人力资源总裁*
+
+对创业公司来说：
+- 最好的融资时代
+- 最坏的招人时代
+
+1. 招聘技术人才：
+>技术行业的合伙人来说，其实平常 我们会推荐大家有更多的机会走出去，拓展自己的技术人脉。 居安思危，包括经常要参加各种技术交流，极客论坛， 还有各种跟我们产品相关的一些技术领域的一些交流会。 那么这些其实会让我们的 CTO 有更多的，可以宣传我们自己 行业，甚至于能够展现自己非常优秀的技术能力的一个途径。 通过这种途径呢，我们会能够吸引到那些 对于我们技术领域里面相关能够有一定的这种 吸引力，希望能够拓展自己视野，然后提高自己技术能力的这些极客 来加入我们的团队。
+
+所以早期技术类招聘，技术合伙人必是核心面试官
+
+2. 曲线救国
+实习生。大公司实习，做的事太窄。小公司能快速提升经验。
+
+3. 使用社交网络和新招聘平台
+
+创业团队的面试官
+1. 你准时吗？候选人对面试官的接触，是对公司的第一个认识
+2. 作为团队负责人，你是否有一半时间在招人上？
+3. 你的面试有效率吗？尽快提供反馈。候选人的需求点（要么对生涯有新的认识，要么对原公司不满）
+4. 让候选人多了解公司，找共鸣
+5. 多挖掘候选人的做过的项目等等，挖掘出技术类候选人的亮点，既能让候选人感受到友好，也能验证项目中的参与度。挖掘候选人的需求点，用来优化面试其他人。
+6. 对优秀者，一站式面试
+7. 多个优秀者，取舍：优先表达能力。
+
+初创团队的渠道：
+1. 内部推荐：最佳配比50%，这是一个良性的比例
+2. 自主招聘
+3. 招聘网站
+4. 猎头渠道：多与猎头沟通、反馈，让猎头成为真正的商业伙伴。
+    - 希望猎头的每一次沟通当成我们的推广
+
+哪些员工要保留
+- 关键
+- 高潜力
+- 对团队有影响力的（开心果，激励人等）
+
+如何留人
+- 工作餐
+- 午休场地
+- 下午餐，水果，小交流
+- 小体育竞赛，给些小奖励
+- 给家属贺卡等等
+
+# 1.4公司文化
+*王强*
+
+把最终极的价值观，以可量化、可执行的日常管理的一些手段体现出来
+
+1. 做人要浅的像清茶，反之员工天天猜测老板想啥，你公司就完了
+2. 做事要深，深不可测
+
+
+【未完待续】
