--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -81,9 +81,10 @@ $\dfrac{1}{1-x}=1+x+x^2+x^3+o(x^3)$
 $(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\alpha(\alpha-1)(\alpha-2)}{3!}x^3 +o(x^3)$
 
 
+# 中值定理
 
-
-
+如果，$f(x),g(x)$在[a,b]上连续，(a,b)上可导，且$g'(x) \neq 0$
+那么$\exists \xi $ 使得$\dfrac{f'(\xi)}{g'(\xi)}=\dfrac{f(b)-f(a)}{g(b)-g(a)}$
 
 
 
@@ -92,9 +93,18 @@ $(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\a
 
 1. 求$f(x)=x^2ln(1+x)$的在x=0处的n阶导数$f^{(n)}(0)$(n>=3)
 
+2.  $f(x)$在闭区间[0,1]上可微，$\forall x \in (0,1) f'(x) \neq 1$
+求证：(0,1)内有且只有一个x，使得$f(x)=x$
+中值定理
 
+3. $f''(x)<0, f(0)=0$，证明，$\forall x_1>0, x_2>0,$有$f(x_1+x_2)<f(x_1)+f(x_2)$
 
-
+4. $f(x),g(x)$在[a,b]上存在二阶导数，并且$g''(x) \neq 0 ,f(a)=b(b)=g(a)=g(b)=0$
+证明：
+    1) 在(a,b)上$g(x) \neq 0$
+    2) $\exists \xi $使$\dfrac{f(\xi)}{g(\xi)}=\dfrac{f''(\xi)}{g''(\xi)}$
+提示：
+$\phi(x)=f(x)g'(x)-f'(x)g(x)$有$\phi(\xi)=0$
 
 
 
