--- a/[6] 数学/统计学.md
+++ b/[6] 数学/统计学.md
@@ -1,7 +1,8 @@
 # 分布
+## 离散分布
 下面是离散分布：
-## (0-1)分布
-## 二项分布
+### (0-1)分布
+### 二项分布
 1. 表示
 $X \thicksim b(n,p) $
 2. 公式
@@ -14,7 +15,7 @@ $DX=np(1-p)$
 可加性
 $b(n_1,p)+b(n_2,p)=b(n_1+n_2,p)$
 
-## 泊松分布
+### 泊松分布
 1. 表示
 $X \thicksim \pi(\lambda)$
 2. 公式
@@ -28,7 +29,7 @@ $\pi(\lambda_1)+\pi(\lambda_2)=\pi(\lambda_1+\lambda_2)$
 泊松定理：
 $\lim\limits_{n \to \infty} \dbinom{n}{k}P_n^k(1-P_n)^{n-k}=\dfrac{\lambda^k e^{-\lambda}}{k!}$
 
-## 帕斯卡分布
+### 帕斯卡分布
 1. 表示
 2. 公式
 $P(X=k)=\dbinom{k-1}{r-1}p^r (1-p)^{k-r}$
@@ -37,15 +38,15 @@ $P(X=k)=\dbinom{k-1}{r-1}p^r (1-p)^{k-r}$
 
 
 
-下面是连续分布：
-## 均匀分布
+## 下面是连续分布：
+### 均匀分布
 1. 表示
 $X \thicksim U(a,b)$
 2. 公式
 3. 特征
 4. 性质
 
-## 指数分布
+### 指数分布
 1. 表示
 $x \thicksim E(\lambda)$
 2. 公式
@@ -59,8 +60,120 @@ $EX=\dfrac{1}{\lambda}$
 $DX=\dfrac{1}{\lambda^2}$
 4. 性质
 
-## 正态分布 
+### 正态分布
 1. 表示
+$X \thicksim N(u,\sigma^2)$
 2. 公式
+$f(x)=\dfrac{1}{\sqrt{2 \pi}\sigma}e^{-\frac{(x-u)^2}{2\sigma^2}}$
 3. 特征
+$EX=u$
+$DX=\sigma^2$
 4. 性质
+    1. 可加性
+  if $X_i \thicksim N(u_i,\sigma^2)(i.i.d)$
+  then$\sum X_i \thicksim N(\sum u_i, \sum \sigma_i^2)$
+    2. 其它特性
+    if $X_i \thicksim N(u_i,\sigma^2)(i.i.d)$
+    then:(def$S^2=\frac{1}{n-1}\sum(X_i-\overline{X})^2$)
+        1. $\overline{X} \thicksim N(u,\dfrac{\sigma^2}{n})$
+        2. $\dfrac{(n-1)S^2}{\sigma^2} \thicksim \chi^2 (n-1)$
+        3. $ES^2=\sigma^2$
+        4. $\overline{X}$与$S^2$是i.i.d
+        5. $\dfrac{\overline{X}-u}{S/\sqrt{n}} \thicksim t(n-1)$
+
+
+## 高级分布
+引入函数$\Gamma(\alpha)=\int_0^\infty x^{\alpha-1}e^{-\beta x}$
+有如下性质：
+1. $\Gamma(1)=1$
+2. $\Gamma(0.5)=\sqrt{\pi}$
+3. $\Gamma(\alpha+1)=\alpha\Gamma(\alpha)$
+4. $\int_0^{\infty} x^{\alpha -1} e^{-\lambda x}dx= \dfrac{\Gamma(\alpha)}{\lambda^\alpha}$
+
+### Gamma distribution
+1. 表示
+$X \thicksim \Gamma(\alpha,\beta)$ or $Gamma(\alpha,\beta)$
+$(\alpha>0,\beta>0)$
+2. 公式
+$f(x)=\left \{ \begin{array} {}
+\dfrac{\beta^\alpha}{\Gamma (\alpha)}x^{\alpha -1} e^{-\beta x}& &for x>=0\\
+\\
+0 &&o/w
+\end{array}\right.$
+3. 特征
+$EX^k=\dfrac{\Gamma(\alpha+k)}{\Gamma(\alpha)}\dfrac{1}{\lambda^k}$
+因此
+ $EX=\dfrac{\alpha}{\lambda}$
+ $\,$
+ $DX=\dfrac{\alpha}{\lambda^2}$
+
+**注意：记忆这一个就记忆了2个**
+4. 性质
+$Ga(\alpha_1,\lambda)+Ga(\alpha_2,\lambda)=Ga(\alpha_1+\alpha_2,\lambda)$
+$Ga(1,\lambda)=EXP(\lambda)$
+$Ga(n/2,1/2)=\chi^2(n)$
+#### 关于chi
+1.定义
+$\chi^2=X_1^2+X_2^2+...+X_n^2$
+2. 公式
+$f(x)=\dfrac{1}{2^{n/2}\Gamma(n/2)}x^{n/2-1}e^{-x/2},x>0$
+3. 特征
+$E\chi^2=n$
+$D\chi^2=2n$
+
+
+### beta distribution
+$f=\dfrac{\Gamma(a+b)}{\Gamma (a) \Gamma (b)}x^{a-1}(1-x)^{(b-1)}$
+
+3. 特征
+$EX^k=\dfrac{\Gamma (\alpha +k)\Gamma(\alpha+\beta)}{\Gamma(\alpha) \Gamma(\alpha+\beta+k)}$
+$EX=\frac{a}{a+b}$
+$DX=\frac{ab}{(a+b)^2(a+b+1)}$
+
+### Fisher Z
+$f=\dfrac{\Gamma(a+b)}{\Gamma(a) \Gamma(b)} \dfrac{x^{a-1}}{(1+x)^{(a+b)}}$
+
+3. 特征
+$EX^k=\dfrac{(a+k-1)(a+k-2)...a}{(b-1)(b-2)...(b-k)}$,(k<b时)
+$EX=\frac{a}{b-1}$b>1
+$DX=\frac{(a(a+b-1))}{(b-1)^2(b-2)}$,b>2
+
+4. 性质
+$\dfrac{n_2}{n_1}X \thicksim F(n_1,n_2)$
+
+#### 关于F distribution
+1. 定义
+$F=\dfrac{\chi^2(n_1)/n_1}{\chi^2(n_2)/n_2}$
+2. 特征
+$EF=\frac{n_2}{n_2-2}$
+$DF=\dfrac{2n_2^2(n_1+n_2-2)}{n_1(n_2-2)(n_2-4)}$,$n_2>4$
+
+## t distribution
+1. 定义
+$\dfrac{N}{\chi^2/n_2}$
+$Et=0$
+$Dt=\frac{n}{n-2}$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+【未完待续】
