--- a/[6] 数学/统计学.md
+++ b/[6] 数学/统计学.md
@@ -83,7 +83,7 @@ $DX=\sigma^2$
 
 
 ## 高级分布
-引入函数$\Gamma(\alpha)=\int_0^\infty x^{\alpha-1}e^{-\beta x}$
+引入函数$\Gamma(\alpha)=\int_0^{+\infty} x^{\alpha-1}e^{- x}dx$
 有如下性质：
 1. $\Gamma(1)=1$
 2. $\Gamma(0.5)=\sqrt{\pi}$
