--- a/[99] 进行中/真格基金创业课.md
+++ b/[99] 进行中/真格基金创业课.md
@@ -172,3 +172,112 @@ CEO容易陷入自信的困境
 
 
 【未完待续】
+# 1.5互联网+
+*李剑威*
+
+行业痛点：为什么低效，为什么无法改变低效
+
+- 找钢网：一站式服务，撮合交易，运输，融资等
+- 美菜网
+- 车道加油：加快加油、支付环节的效率。提高加油站的客户
+- 名医主刀：靠谱权威的医生档案
+
+# 2.1产品匹配与市场需求
+
+*蜜芽网创始人 刘楠* 31岁
+
+团队、市场、产品
+
+案例：
+- 淘宝：取悦于喜欢海量品种的
+- 京东：取悦于送货快
+- 蜜芽：进口婴儿品，不做海量，节省妈妈的时间。
+- 唯品会：折扣
+
+
+市场与产品匹配
+- 市场调研与学习
+    开店为例：有没有调研流量？（至少3天 周一、周3、周日）
+    - 去看星巴克的 **财务报表**
+    - 找到完全不认识的陌生人去访谈。（亲朋好友会局部过于相近，奉承你）
+    - 实地考察：在香港发现内地市场很火，在拉斯维加斯发现厂商很热情
+- 判断与决策。判断做的好，减少成本。包括时间成本，人力成本，资金成本，试错成本
+- 如何做到product-market fit呢，要小步快跑，快速试错
+    - 低成本，能用1万做，不用5万
+    - 小团队，能用3个人，不用10个人，禁止跨部门协作。充分授权，不要让他们跨部门要资源。
+    - 重复一到三。错的不一定真不行。
+    判断是否已经成功地product-market fit：
+        - 用户爆发式增长，
+        - 用户自增长，不投放也增长，不认识的人也在转发
+        - 小规模投放效果远远高于平均水平
+        - 不得不不断的增加后端的吞吐量
+- 做到product-market fit后要规模化，市场投放、前后端投资、价格战，从而鲸吞市场
+    - 扩大到足够大时，又会发现不product-market fit了，这时要调产品
+
+# 2.2商业模式
+- 顾客要买钻孔机，实际上是要买那个孔
+
+商业模式包括
+1. 价值创造
+who谁是顾客
+what创造什么样的价值
+2. 价值提供
+how：需要怎样的关键资源、能力，关键流程
+3. 价值获取
+如何赚取利润
+收入模式背后的成本结构、利润结构，这些决定了能否长期盈利
+
+
+
+
+1. 商业模式的由来是什么？
+
+2. 收入模式有哪几种？
+- 平台模式：雁过拔毛
+- 剃刀-刀片模式
+    - 打印机模式（打印机不贵，墨盒贵）
+    - 飞机引擎（发动机寿命很长，维修和部件是主要利润来源）
+    - 苹果（倒过来，硬件赚钱，软件创造价值）
+- freemium：免费+付费
+    - 腾讯
+    - 腾讯
+- 多边：（迪士尼）
+    - 流量变现
+    - 广告
+
+3. 实现价值创新的框架有哪些内容？
+
+4. 商业模式的陷阱有哪些？
+
+利乐的商业模式
+- 乳品企业购买设备，只需要20%货款，但需要承诺若干年只买利乐材料的承诺
+- 派人去乳品企业做现代化知道，甚至包括厂房、软件
+- 形成牢固的利益锁链
+
+迪士尼的商业模式（利润倍增器）
+- 动画、电影
+- 主题公园
+- 玩具等衍生品
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+【未完待续】
