--- a/[99] 进行中/真格基金创业课.md
+++ b/[99] 进行中/真格基金创业课.md
@@ -217,6 +217,19 @@ CEO容易陷入自信的困境
 # 2.2商业模式
 - 顾客要买钻孔机，实际上是要买那个孔
 
+利乐的商业模式
+- 乳品企业购买设备，只需要20%货款，但需要承诺若干年只买利乐材料的承诺
+- 派人去乳品企业做现代化知道，甚至包括厂房、软件
+- 形成牢固的利益锁链
+
+迪士尼的商业模式（利润倍增器）
+- 动画、电影
+- 主题公园
+- 玩具等衍生品
+
+
+
+1. 商业模式的由来是什么？
 商业模式包括
 1. 价值创造
 who谁是顾客
@@ -227,10 +240,6 @@ how：需要怎样的关键资源、能力，关键流程
 如何赚取利润
 收入模式背后的成本结构、利润结构，这些决定了能否长期盈利
 
-
-
-
-1. 商业模式的由来是什么？
 
 2. 收入模式有哪几种？
 - 平台模式：雁过拔毛
@@ -245,19 +254,18 @@ how：需要怎样的关键资源、能力，关键流程
     - 流量变现
     - 广告
 
-3. 实现价值创新的框架有哪些内容？
 
 4. 商业模式的陷阱有哪些？
+- 有用户，不赚钱
+- 用户没有黏性。
+- 聚焦于低频、长周期的客户需求
+- 用大量金钱获取是得不偿失的
+- 时机的把握。该快的时候慢，该慢的时候快
 
-利乐的商业模式
-- 乳品企业购买设备，只需要20%货款，但需要承诺若干年只买利乐材料的承诺
-- 派人去乳品企业做现代化知道，甚至包括厂房、软件
-- 形成牢固的利益锁链
 
-迪士尼的商业模式（利润倍增器）
-- 动画、电影
-- 主题公园
-- 玩具等衍生品
+
+
+
 
 
 
