--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -2,8 +2,6 @@
 试着用markdown记录这些，效果并不好，所以还是参见doc:
 [微积分.docx](微积分.docx)
 
-
-
 # 一元函数微积分
 
 ## 中值定理
@@ -106,22 +104,51 @@ $(1+x)^\alpha=1+\dfrac{\alpha}{1!}x + \dfrac{\alpha(\alpha-1)}{2!}x^2+ \dfrac{\a
 提示：
 $\phi(x)=f(x)g'(x)-f'(x)g(x)$有$\phi(\xi)=0$
 
+5. $f(x)$在[a,b]上连续，(a,b)上可导，$f(a)=f(b)=1,$证明：
+$\exists \xi ,\eta \in (0,1)$使得$e^{\xi-\eta}[f(\eta)+f'(\eta)]=1$
+
+提示
+$e^x f(x)$
+
+6. $f(x)$在[0,1]上连续，(0,1)上可导$f(0)=f(1)=0,f(1/2)=1$,证明
+    1) $\exists \eta \in (1/2,1)$,使得$f(\eta)=\eta$
+    2) $\forall \lambda ,\exists \xi\in(0,\eta)$,使得$f'(\xi)-\lambda [f(\xi)-\xi]=1$
+提示：
+$e^{-\lambda }(f(x)-x)$
 
 
 
+# 一元积分学
+## 中值定理
+- TH :积分中值定理
+$f(x)$在$[a,b]$上连续，那么$\exists \xi \in [a,b]$使得：
+$\int_a^b f(x) dx = f(\eta)(b-a)$
+
+- TH: 二重积分中值定理
+$f(x,y)$在有界闭区域D上连续，$\sigma_0$是D的面积，那么$\exists (\epsilon,\mu) \in D$,使得
+$\iint_D f(x,y)d\sigma =f(\epsilon,\mu) * \sigma_0$
+
+- 中值定理第一推广
+$f(x),g(x)$在[a,b]上连续，g(x)在[a,b]上不变号，那么$\exists \epsilon \in (a,b)$使得，$\int_a^b f(x)g(x) dx =f(a) \int_a^b g(x) dx$
+
+- 中值定理第二推广1
+$f(x),g(x)$在[a,b]上可积，f(x)单调，那么$\exists \epsilon \in (a,b)$使得，$\int_a^b f(x)g(x)dx=f(a)\int_a^\epsilon g(x)dx + f(b) \int_\epsilon ^b g(x)dx$
+
+- 中值定理第二推广2
+附加条件：f(x)>=0且单调递减
+$\int_a^b f(x)g(x)dx= f(a) \int_a^\epsilon g(x) dx$
+
+- 中值定理第二推广3
+附加条件：f(x)<=0且单调递增
+$\int_a^b f(x)g(x)dx= f(b) \int_\epsilon^b g(x) dx$
+
+## 求积分时的技巧
+$dt=\cos^2t d \tan t$
 
 
-
-
-
-
-
-
-
-
-
-
-
+## 其它
+- 对变上下限积分的求导方法
+$\dfrac{d}{dx}\int_{a(x)}^{b(x)}f(x,t)dt=f(x,b(x)) * b'(x) - f(x,a(x))* a'(x) +\int_{a(x)}^{b(x)} \dfrac{\partial f(x,t)}{\partial x} $
 
 
 
