--- a/[9] 读书/Coursera/真格基金创业课.md
+++ b/[9] 读书/Coursera/真格基金创业课.md
@@ -13,23 +13,20 @@
 2. 选择和排序。众多的选择中，你选哪个。你的选择才是你
 3. 独立的思想，独立的意志，来发售一个产品
 
-
-1.	提升自身领导力的方法有哪些？
-领导品质：
+- 领导品质：
     1. 待人真诚
     2. 有预见性
     3. 称职胜任
     4. 鼓舞人心
 
-    卓越领导的五种行为：
+- 卓越领导的五种行为：
     1. 以身作则
     2. 共启愿景
     3. 挑战现状
     4. 使众人行。每个人的知识都是有限的，因此需要他人的支持
     5. 激励人心。
 
-
-2.	品格为何如此重要？
+- 品格为何如此重要？
 品格对价值观有很大的辅助作用
 价值观+品格=巨大的领导力
 领导力是影响力，是制造追随者的能力，让下属做你期望的，下属又特别愿意做
@@ -41,8 +38,8 @@
     3. be
       知行合一，还要"成"
 
-      Leader of Character
-      追求真理，评判是非，在行动中表现出勇气和承诺 品格不仅涉及到伦理道德的最高准则
+Leader of Character
+追求真理，评判是非，在行动中表现出勇气和承诺 品格不仅涉及到伦理道德的最高准则
 
 品格素质： 开明、 诚实、 博爱，也就是要有爱心 正直、 刚毅、 宽容、 自信 自律、 尽职尽责、 永不放弃 自我激励
 
@@ -168,8 +165,7 @@ CEO容易陷入自信的困境
 把最终极的价值观，以可量化、可执行的日常管理的一些手段体现出来
 
 1. 做人要浅的像清茶，反之员工天天猜测老板想啥，你公司就完了
-2. 做事要深，深不可测
-
+2. 做事要深，深不可测。以至于任何人都无法模仿
 
 【未完待续】
 # 1.5互联网+
@@ -179,7 +175,7 @@ CEO容易陷入自信的困境
 
 - 找钢网：一站式服务，撮合交易，运输，融资等
 - 美菜网
-- 车道加油：加快加油、支付环节的效率。提高加油站的客户
+- 车道加油：加快加油、支付环节的效率。提高加油站的客户管理能力
 - 名医主刀：靠谱权威的医生档案
 
 # 2.1产品匹配与市场需求
@@ -191,7 +187,7 @@ CEO容易陷入自信的困境
 案例：
 - 淘宝：取悦于喜欢海量品种的
 - 京东：取悦于送货快
-- 蜜芽：进口婴儿品，不做海量，节省妈妈的时间。
+- 蜜芽：进口婴儿品，不做海量，节省妈妈的选择时间。
 - 唯品会：折扣
 
 
@@ -205,21 +201,21 @@ CEO容易陷入自信的困境
 - 如何做到product-market fit呢，要小步快跑，快速试错
     - 低成本，能用1万做，不用5万
     - 小团队，能用3个人，不用10个人，禁止跨部门协作。充分授权，不要让他们跨部门要资源。
-    - 重复一到三。错的不一定真不行。
+    - 重复一到三。因为错的不一定真不行。
     判断是否已经成功地product-market fit：
         - 用户爆发式增长，
         - 用户自增长，不投放也增长，不认识的人也在转发
         - 小规模投放效果远远高于平均水平
         - 不得不不断的增加后端的吞吐量
 - 做到product-market fit后要规模化，市场投放、前后端投资、价格战，从而鲸吞市场
-    - 扩大到足够大时，又会发现不product-market fit了，这时要调产品
+    - 扩大到足够大时，会发现又不product-market fit了，这时要调产品
 
 # 2.2商业模式
 - 顾客要买钻孔机，实际上是要买那个孔
 
 利乐的商业模式
 - 乳品企业购买设备，只需要20%货款，但需要承诺若干年只买利乐材料的承诺
-- 派人去乳品企业做现代化知道，甚至包括厂房、软件
+- 派人去乳品企业做现代化指导，甚至包括厂房、软件
 - 形成牢固的利益锁链
 
 迪士尼的商业模式（利润倍增器）
@@ -228,39 +224,217 @@ CEO容易陷入自信的困境
 - 玩具等衍生品
 
 
-
-1. 商业模式的由来是什么？
-商业模式包括
-1. 价值创造
+- 商业模式包括：
+    1. 价值创造
 who谁是顾客
 what创造什么样的价值
-2. 价值提供
+    2. 价值提供
 how：需要怎样的关键资源、能力，关键流程
-3. 价值获取
+    3. 价值获取
 如何赚取利润
 收入模式背后的成本结构、利润结构，这些决定了能否长期盈利
 
 
-2. 收入模式有哪几种？
-- 平台模式：雁过拔毛
-- 剃刀-刀片模式
-    - 打印机模式（打印机不贵，墨盒贵）
-    - 飞机引擎（发动机寿命很长，维修和部件是主要利润来源）
-    - 苹果（倒过来，硬件赚钱，软件创造价值）
-- freemium：免费+付费
-    - 腾讯
-    - 腾讯
-- 多边：（迪士尼）
-    - 流量变现
-    - 广告
+- 收入模式有哪几种？
+    - 平台模式：雁过拔毛
+    - 剃刀-刀片模式
+        - 打印机模式（打印机不贵，墨盒贵）
+        - 飞机引擎（发动机寿命很长，维修和部件是主要利润来源）
+        - 苹果（倒过来，硬件赚钱，软件创造价值）
+    - freemium：免费+付费
+        - 腾讯
+        - 游戏
+    - 多边：（迪士尼）
+        - 流量变现
+        - 广告
+
+- 商业模式的陷阱有哪些？
+    - 有用户，不赚钱
+    - 用户没有黏性。
+    - 聚焦于低频、长周期的客户需求
+    - 用大量金钱获取是得不偿失的
+    - 时机的把握不好。该快的时候慢，该慢的时候快
+
+# 3.1 如何写商业计划书
+ *刘元* 真格基金副总裁
+
+## BP： Business Plan  ，通常是20页以下的PPT
+
+- 颜值要高
+    - 颜色和字体要专业
+    主色不超过3个
+    字体统一
+    - 每页PPT不超过5个Point
+    - 不要用最高级，不要情绪化
+
+- 团队、市场、产品、竞品分析、要求条款
+    - 团队1~2页放最前
+    - 产品或市场（市场1页）
+    - 产品可以是截图、demo、后台等
+    - 竞品，有哪些公司，哪些替代品，潜在进入者，可以用SWOT等
+    - 要求条款：要融资多少，花在哪，花多久。应当简洁。加上联系方式。预测不要太详细（事实上无法详细，强行详细会让人觉得不靠谱）
+
+案例：LinkedIn的BP
+[英文版](http://reidhoffman.org/linkedin-pitch-to-greylock/)
+[中文版](http://events.36kr.com/linkedin/)
+
+## 接触投资人
+
+- 不要用Email
+- 最好是朋友介绍、朋友转发、微信群等
+- 不要堵到门口
 
 
-4. 商业模式的陷阱有哪些？
-- 有用户，不赚钱
-- 用户没有黏性。
-- 聚焦于低频、长周期的客户需求
-- 用大量金钱获取是得不偿失的
-- 时机的把握。该快的时候慢，该慢的时候快
+面谈：先用一句话把情况说清楚
+- 会问市场有多大，回答时不要太长。市场太小是一个常见的拒绝原因
+- 会问为什么是我。性格、工作经历、教育背景、狂热的个人爱好、是意见领袖等等
+- 为什么是现在，为什么过去不能做，明年不能做。
+- 产品、数据、demo等
+- 如何赚钱
+- 团队是如何建立的。股权是否清晰，为什么如此分配。
+
+## 禁忌
+1. 不要想一口气融太多钱，不要追求过高估值。
+2. 要尊重对方，不要一开始就想见大佬
+
+# 估值问题
+
+股权陷阱：
+- 天使投资人控股：1.代理人问题，2.未来管理层可能会被换掉
+- 平均主义
+- 关键合伙人兼职
+
+关键指标
+- DAU： daily active user
+- DAU by cohort
+- cohort retention
+
+cap table
+
+# 众筹
+
+- 实物众筹：投资人拿到的是实物
+- 股权众筹
+- 房地产众筹
+- 对人的众筹
+
+两类富人：
+1. 企业家
+2. 投资人
+他们一辈子做的事，就是把自己所有的精力、资源（资源包括金钱、时间）转化为企业股权
+
+
+1. 传统融资与互联网众筹有什么区别？
+    1. 投资模式上，传统是1对1对接。互联网众筹是创业者同时面对众多小型投资人
+    2. 投资人的选择上，可以同时接触到很多投资人
+    3. 解决了信息不对称，市场效率更高，可以让创业者去挑选投资人。
+    4. 资源获取能力更强。一家机构投资很多项目，但众筹面对很多人，以后可以调用的资源可能更多
+    5. 用新媒介方式传播。
+
+2. 股权众筹的组织方式是什么？
+
+    1. 创业者，也就是融资方
+    2. 机构，作为领投方。
+    3. 广大跟投人
+
+
+创业者获取资源能力，使用资源能力
+众筹的退出：IPO，下一轮融资中间转让，新三板，清算、强制回购
+
+# 法务
+*龚睿* 真格法务
+
+## 流程（一般3~6个月）
+- 初步接触
+    - 商业计划书
+    - 保密协议
+- 业务DD
+    - 公司业务、财务数据
+    - 行业分析，业务调查
+    - 投资意向书
+- 主要条款
+    - 估值，融资比，未来投资权利
+- 财务/法律DD
+- 签署正式协议及交割
+
+termsheet（投资意向书）中的大多条款法律效力，排他期有法律效力，在排他期内，创始人不会与其它投资人沟通。
+天使轮的排他期一般3~4周
+比较后期的可能达到8周
+
+## 币种选择：
+- 美元：中外合资，境内股东不变，未来在国内上市
+    - 缺点：国内外汇管制，去商务局办理手续
+    - 美元使用不便
+- 人民币优点：
+     - 交割速度快，没有特别的政府审批限制、产业政策的限制，用起来没有限制
+    - 退出渠道在A股，A股的估值高
+    - 流动性好
+    - A股的公司还可以通过增发的方式来进行并购
+    - A股投资人更熟悉
+    - A股对这个公司资质的要求 实际上是远远低于美股的要求的
+    - 另外还有一点就是A股市场对于公司盈利能力的要求 要远远地低于境外资本市场对公司盈利能力的要求
+- 人民币缺点：
+    - 需要烧很多钱才能盈利的公司，在人民币市场能拿到很少的钱，在境外可以
+    - 境外合规性审批少
+- 美元VIE结构：
+    - 没有产业政策限制
+    - 第一次融资时间长，后续都很快，因为交割是境外发生的，流程快
+    - 选择在境外资本市场上市。对利润要求高
+
+## 关键条款
+创始人的控制权
+海外公司法灵活，好解决：
+- 创始人在董事会席位过半，创始人多投一票
+- 股东表决权，发展时间长，CEO能力有信赖，投资者股票中，与经营有关的投票权交给创始人。创始人的股权，每股10票
+- 领售权：投资人有权单方面表决，把股权卖给某个投资机构。设定前提：估值达到某标准以上、期限。。。
+
+境内：
+- 多个创始人签署一致行动协议，使得投票权集中。
+- 员工的股权可以设立一个合伙公司，创始人担任普通合伙人，行使表决权。员工作为有限合伙人只享受收益
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
