--- a/[6] 数学/金融数学.md
+++ b/[6] 数学/金融数学.md
@@ -34,9 +34,17 @@ $i^{(m)}$指的是每$\dfrac{1}{m}$期付息$\dfrac{i^{(m)}}{m}$
 
 名义利率与实际利率的关系：
 $1+i=(1+\dfrac{i^{(m)}}{m})^m$
+名义贴现率与实际贴现率的关系
+$1-d=(1-\dfrac{d^{(m)}}{m})^m$
+
+- 利息力
+$\delta_t=\dfrac{a'(t)}{a(t)}=\dfrac{A'(t)}{A(t)}$
 
 
-
+- 关于投资期
+    - 严格单利法（英国法），严格按照日历计算
+    - 常规单利法（欧洲大陆法），一年视为360天，每月视为30天$360(Y_2-Y_1)+30(M_2-M_1)+(D_2-D_1)$
+    - 银行家规则（欧洲货币法），实际天数作为投资天数，一年视为360天
 
 
 
