--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -144,11 +144,19 @@ $\int_a^b f(x)g(x)dx= f(b) \int_\epsilon^b g(x) dx$
 
 ## 求积分时的技巧
 $dt=\cos^2t d \tan t$
-
+- 先看定积分的奇偶性，有时可以大大简化运算
 
 ## 其它
 - 对变上下限积分的求导方法
-$\dfrac{d}{dx}\int_{a(x)}^{b(x)}f(x,t)dt=f(x,b(x)) * b'(x) - f(x,a(x))* a'(x) +\int_{a(x)}^{b(x)} \dfrac{\partial f(x,t)}{\partial x} $
+$\dfrac{d}{dx}\int_{a(x)}^{b(x)}f(x,t)dt=f(x,b(x)) * b'(x) - f(x,a(x))* a'(x) +\int_{a(x)}^{b(x)} \dfrac{\partial f(x,t)}{\partial x} dt$
+
+证明：
+$F(x)=\int_{u(x)}^{v(x)}f(t,x)dt$
+$=F(t,x)|_ {t=u(x)}^{v(x)}=F(v(x),x)-F(u(x),x)$
+
+$F'(x)=\dfrac{\partial F(v,x)}{\partial v}v'(x)-\dfrac{\partial F(u,x)}{\partial u}u'(x)+\dfrac{\partial F(v,x)}{\partial x}-\dfrac{\partial F(u,x)}{\partial x}$
+$\space $
+$=\dfrac{d}{dv}\int_u^vf(t,x)dt*v'(x)-\dfrac{d}{du}\int_u^vf(t,x)dt*u'(x)+\int_{u(x)}^{v(x)}\dfrac{\partial}{\partial x}f(t,x)dt$
 
 
 
@@ -156,8 +164,7 @@ $\dfrac{d}{dx}\int_{a(x)}^{b(x)}f(x,t)dt=f(x,b(x)) * b'(x) - f(x,a(x))* a'(x) +\
 
 
 
-
-
+## 关于极坐标
 
 
 
