--- a/[6] 数学/[1] 微积分.md
+++ b/[6] 数学/[1] 微积分.md
@@ -165,7 +165,8 @@ $=\dfrac{d}{dv}\int_u^vf(t,x)dt*v'(x)-\dfrac{d}{du}\int_u^vf(t,x)dt*u'(x)+\int_{
 
 
 ## 关于极坐标
-
+极坐标系围成的面积：
+$S=\int_0^{2\pi}\dfrac{1}{2}r^2d\theta$
 
 
 
