--- a/[6] 数学/金融数学.md
+++ b/[6] 数学/金融数学.md
@@ -20,11 +20,14 @@ $d=\dfrac{A(1)-A(0)}{A(1)}$
     - 以实际贴现率6%借钱100元，年初收94元，年末还100元
 
 
-- 贴现金额，利息金额
+- Def:贴现金额，利息金额
 贴现金额=期末可回收金额 * 贴现率
 利息金额=期初投资金额 * 利率
 
-- 复利、单利、复贴现、单贴现
+- TH:贴现率与利率的关系
+$(1+i)(1-d)=1$
+
+- TH:复利、单利、复贴现、单贴现
 $0<t<1$,有$(1-d)^t<1-dt$,而且$(1+i)^t<1+it$
 $t=1$,有$(1-d)^t=1-dt$
 $t>1$,有$(1-d)^t>1-dt$，而且$(1+i)^t>1+it$
@@ -47,12 +50,17 @@ $\delta_t=\dfrac{a'(t)}{a(t)}=\dfrac{A'(t)}{A(t)}$
     - 银行家规则（欧洲货币法），实际天数作为投资天数，一年视为360天
 
 
+## 几个阶梯小技巧
+- Th：已知利息率$\delta(t)$,求1元从$t_1$到$t_2$的累积
+结果$=\dfrac{exp(\int_0^{t_2} \delta (t) dt)+C}{exp(\int_0^{t_1} \delta(t)dt)+C}=exp(\int_{t_1}^{t_2}\delta(t)dt)$
+也就是说，只需要求期间定积分即可，不用管C或0时刻累积
 
+- TH:贴现率与利率的关系
+$(1+i)(1-d)=1$
 
-
-
-
-
+- 无论名义利率如何，转化为实际利率i后，利息力=$ln(1+i)$
+$a(t)=(1+\dfrac{i^{(n)}}{n})^{nt}$
+所以，$\delta(t)=ln(1+\dfrac{i^{(n)}}{n})^{n}=ln(1+i)$
 
 
 
