--- a/[9] 读书/[9-5] 社会经济学/3社会学.md
+++ b/[9] 读书/[9-5] 社会经济学/3社会学.md
@@ -31,3 +31,31 @@
 - 马歇尔冲突：自由竞争→规模扩大→规模经济→垄断→阻止竞争→扼杀企业活力
 - 米德冲突
 - 荷兰病：某一初级产品异常繁荣而导致其它部门衰落
+
+
+# 黑天鹅
+黑天鹅定义
+- 意外性，过去没有任何能够确定它发生的证据
+- 会产生极端影响
+- 事后（而不是事前）可解释和可预测。虽然有意外性，但是人类在事后会为了解释它编造理由。
+
+假如一位有勇气、影响力、智慧、远见、毅力的立法者颁布法律，2001年9月11日之后强制要求飞机驾驶舱必须安装防弹门（给挣扎中的航空公司带来巨大的成本），这人不会被怀念，而是被赶下台。
+
+谁会得到奖赏？
+- 是避免经济衰退的央行行长，还是“纠正”了前任的错误，并恰好在经济复苏期的那个人？
+- 是避免发生一场战争的政治家，还是发动战争，并稍幸赢了的人？
+- 预防的人被忘记，治疗的人留名
+- 正常的东西是不重要的，凭日常生活推测不出某人会犯罪
+
+黑天鹅的3个侧面
+- 证实谬误：我们倾向于看到能够证实我们已知的知识，而不是未知的知识
+- 叙述谬误
+- 妨碍逻辑思维的情绪
+- 沉默的证据
+
+对待历史问题，人们会犯的三个毛病
+- 假想的理解：在复杂世界中，人们以为自己知道正在发生什么
+- 反省的偏差：人们只能事后评价事物。好像灾难的发生有一个具体的原因，只需要消除这些具体原因就可以避免灾难
+- 柏拉图化
+
+历史不会爬行，只会跳跃
