--- a/[6] 数学/金融数学.md
+++ b/[6] 数学/金融数学.md
@@ -50,7 +50,7 @@ $\delta_t=\dfrac{a'(t)}{a(t)}=\dfrac{A'(t)}{A(t)}$
     - 银行家规则（欧洲货币法），实际天数作为投资天数，一年视为360天
 
 
-## 几个阶梯小技巧
+## 几个解题小技巧
 - Th：已知利息率$\delta(t)$,求1元从$t_1$到$t_2$的累积
 结果$=\dfrac{exp(\int_0^{t_2} \delta (t) dt)+C}{exp(\int_0^{t_1} \delta(t)dt)+C}=exp(\int_{t_1}^{t_2}\delta(t)dt)$
 也就是说，只需要求期间定积分即可，不用管C或0时刻累积
@@ -64,21 +64,46 @@ $a(t)=(1+\dfrac{i^{(n)}}{n})^{nt}$
 
 
 
+# 年金
 
+## 标准型年金
+- 定义：付款间隔不变，每次付款额度相等，整个付款期利率不变，计息频率与付款频率相等
 
+- Def：期末付款：
+(corner应该盖住n的，但不知道怎么打出来)
+0时刻现值$a_{n\urcorner} = \dfrac{1-v^n}{i}=\dfrac{1-\dfrac{1}{(1+i)^n}}{i}$
+n时刻累积值$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$
+$a_{n\urcorner i}$后面标上利息，以防混淆
 
+- TH1:
+$1=ia_{n\urcorner}+v^n$
+含义：右边是所有利息i的现值之和，加上期末本金折现，这些等于左边的现值1
 
+- TH2：
+$(1+i)^n=1+is_{n\urcorner}$
+含义：等式左边是期初投资1，期末累计值。等式右边是本金，加上所有利息i的累积值之和。
 
+- TH3：
+$\dfrac{1}{a_{n\urcorner}}=\dfrac{1}{s_{n\urcorner}}+i$
+含义：$P=1/a_{n\urcorner}$现值为1，每期投入P
+$1+is_{n\urcorner}=Ps_{n\urcorner}$
 
+- Def:期初付款
+0时刻现值：
+$\ddot a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$
+n时刻终值：
+$\ddot s_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$
 
+||||
+|--|--|--|
+|$a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{i}$|$\ddot a_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$ |$a_{n\urcorner}(1+i)=\ddot a_{n\urcorner}$|
+|$s_{n\urcorner}=\dfrac{(1+i)^n-1}{i}$|$\ddot s_{n\urcorner}=\dfrac{1-\dfrac{1}{(1+i)^n}}{1-\dfrac{1}{1+i}}$|$s_{n\urcorner}(1+i)=\ddot s_{n\urcorner}$|
+|$\dfrac{1}{a_{n\urcorner}}=\dfrac{1}{s_{n\urcorner}}+i$|$\dfrac{1}{\ddot a_{n\urcorner}}=\dfrac{1}{\ddot s_{n\urcorner}}+1-\dfrac{1}{1+i}$||
 
+## 永续年金
+$a_{\infty \urcorner}=\dfrac{1}{i}$
 
-
-
-
-
-
-
+## 非标准期
 
 
 
